--- a/lib/fdoc/templates/service.html.erb
+++ b/lib/fdoc/templates/service.html.erb
@@ -6,6 +6,7 @@
     </title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="<%= css_path %>" />
+    <link rel="stylesheet" type="text/css" href="<%= theme_css_path %>" />
   </head>
   <body>
     <div id="page">
